fix notes on my income, fix modal position on small screen, etc

--- a/src/app/features/income-seller/my-income/my-income.component.scss
+++ b/src/app/features/income-seller/my-income/my-income.component.scss
@@ -25,6 +25,7 @@
         margin: 0 15px 15px;
         text-align: justify;
         cursor: pointer;
+        width: 100%;
     }
 
     &__noActive{
